--- a/src/scss/component/_accordion.scss
+++ b/src/scss/component/_accordion.scss
@@ -1,5 +1,5 @@
 .accordion-title {
-	background-color: #23282d;
+	background-color: $sub_color;
 	border: 1px solid transparent;
 	color: #fff;
 	margin-bottom: 0;
@@ -25,7 +25,7 @@
 	}
 
 	&:hover, &:active, &.is-active {
-		background-color: #595959;
+		background-color: $main_color;
 	}
 
 	&.is-active::before {
