--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import "lib/const";
 @import "component/accordion";
 @import "component/api_status";
+@import "component/logView";
 
 h1 {
 	padding-bottom: 20px !important;
