--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,12 @@
 .sct-item-wrapper {
 	margin-top: 30px;
 }
+
+.components-snackbar {
+	animation-duration: 4s;
+	animation-iteration-count: 5;
+	animation-name: fade;
+	position: fixed;
+	right: 30px;
+	top: 50px;
+}
