refs #46 add success, error style -> snackbar component

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,3 +10,14 @@
 	right: 30px;
 	top: 50px;
 }
+
+.sct {
+
+	&_success {
+		background-color: #00a32a;
+	}
+
+	&_error {
+		background-color: #d63638;
+	}
+}
