refs #46 add keyframes -> snackbar component

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -21,3 +21,22 @@
 		background-color: #d63638;
 	}
 }
+
+@keyframes fade {
+
+	0% {
+		opacity: 0;
+	}
+
+	25% {
+		opacity: 0.7;
+	}
+
+	75% {
+		opacity: 0.7;
+	}
+
+	100% {
+		opacity: 0;
+	}
+}
