refs #78 add tools-log style

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -21,6 +21,15 @@
 		background-color: #d63638;
 	}
 
+	&-tools-log {
+		margin-top: 30px;
+		width: 80%;
+
+		&-wrapper {
+			margin-top: 30px;
+		}
+	}
+
 	&-logs {
 		width: 80%;
 
