refs #95 fix tab_panel

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,8 +13,11 @@
 		top: 50px;
 	}
 
-	&-tab-panel__tabs-item:focus:not(:disabled) {
-		box-shadow: initial;
+	&-tab-panel__tabs {
+
+		&-item:focus:not(:disabled) {
+			box-shadow: initial;
+		}
 	}
 }
 
