refs #95 add components-base-control -> width

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -4,6 +4,10 @@
 
 .components {
 
+	&-base-control {
+		width: 80%;
+	}
+
 	&-snackbar {
 		animation-duration: 4s;
 		animation-iteration-count: 5;
