refs #551 add margin

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -68,6 +68,11 @@
 		.update-time {
 			margin-right: 12px;
 		}
+
+		> section {
+			margin-bottom: 20px;
+			margin-top: 20px;
+		}
 	}
 
 	&-tools-log {
